--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,48 @@
-
-/* Your CSS Code here. */
+*{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
+body{
+	width:100%;
+	background:lightgray;
+}
+h1{
+	text-align:center;
+}
+form{
+	width:400px;
+	margin:100px auto;
+	background:white;
+	height:600px;
+	width:600px;
+	padding:40px;
+	border-radius:20px;
+	
+}
+label{
+	
+}
+input{
+	height:35px;
+	width:280px;
+	margin-top:10px;
+	border:1px solid lightcoral;
+	border-radius:5px;	
+}
+input[type="radio"] {
+	width:19px;
+	margin-bottom:20px;
+	background:red;
+	margin-right:20px;
+}
+button{
+	padding:19px 40px;
+	margin:10px auto;
+	border:none;
+	background:blue;
+	color:white;
+	font-weight:600;
+	border-radius:5px;
+	
+}
